# virtual-picross

./: .gitignore  Cargo.toml  README.md  assets.toml  build.rs  credit.txt  justfile
.cargo/: config.toml
assets/: assets-1x.toml  assets-2x.toml  assets-megu.toml
src/: game.rs  main.rs  menu.rs  puzzle.rs  save.rs  state.rs  title.rs
src/game/: megu.rs  pause.rs
