[package]
name = "virtual-picross"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
vb-graphics = { git = "https://github.com/SupernaviX/rust-vb-platform.git", rev = "9f52055" }
#vb-graphics = { path = "../rust-vb-platform/packages/vb-graphics" }
vb-rt = { git = "https://github.com/SupernaviX/rust-vb-platform.git", rev = "9f52055" }
#vb-rt = { path = "../rust-vb-platform/packages/vb-rt" }

[build-dependencies]
vb-graphics-build = { git = "https://github.com/SupernaviX/rust-vb-platform.git", rev = "9f52055" }
#vb-graphics-build = { path = "../rust-vb-platform/packages/vb-graphics-build" }
vb-rt-build = { git = "https://github.com/SupernaviX/rust-vb-platform.git", rev = "9f52055" }
#vb-rt-build = { path = "../rust-vb-platform/packages/vb-rt-build" }
